--- a/index.html
+++ b/index.html
@@ -9,18 +9,18 @@
   </head>
   <body>
     <div class="top-container">
-      <img class="top-cloud" src="images/cloud.png" alt="cloud-img">
+      <img class="top-planet" src="images/planet.png" alt="planet-img">
       <h1>I'm Siqiao</h1>
       <h2>a RMIT student</h2>
-      <img class="bottom-cloud" src="images/cloud.png" alt="cloud-img">
-      <img src="images/spaceship.png" alt="mountain-img">
+      <img class="bottom-world" src="images/world.png" alt="earth-img">
+      <img src="images/spaceship.png" alt="spaceship-img">
     </div>
 
     <div class="middle-container">
       <div class="profile">
-        <img class="spaceman" src="images/astro.png" alt="spaceman">
+        <img class="spaceman" src="images/astron.png" alt="spaceman">
         <h2>Hello.</h2>
-        <p class="intro">I am a RMIT student studying Master of IT. I like coding and building Websites.</p>
+        <p class="intro">My name is Siqiao Li. I am a RMIT student studying Master of IT. I like coding and building Websites.</p>
       </div>
       <hr>
       <div class="skills">
@@ -28,17 +28,17 @@
         <div class="skill-row">
           <img class="web-img" src="images/web-development.png" alt="web-img">
           <h3>HTML + CSS + Javascript</h3>
-          <p>In 2020, I built a website called StayHome, which is a website providing information about COVID-19 and encouraging people to stay at home.<br /><a class="link" href="">Go and have a look</a></p>
+          <p>In 2020, I built a website called StayHome, which is a website providing information about COVID-19 and encouraging people to stay at home.<br /><a class="link" href="https://task2-272810.appspot.com/login">Go and have a look</a></p>
         </div>
         <div class="skill-row">
           <img class="php-img" src="images/php.png" alt="php-img">
           <h3>php</h3>
-          <p>In 2019, I built a social media website called Lite. Like facebook, people can search friends, add friends and create post.<br /><a class="link" href="">Go and make a friend!</a></p>
+          <p>In 2019, I built a social media website called Lite. Like facebook, people can search friends, add friends and create post.<br /><a class="link" href="http://titan.csit.rmit.edu.au/~s3774940/LiteHomepage.html">Go and make a friend!</a></p>
         </div>
         <div class="skill-row">
           <img class="java-img" src="images/java.png" alt="java-img">
           <h3>Java</h3>
-          <p>I started learning Java in 2016. Since then, I have started loving coding. I built an application called CityLodge, which is a apartment renting system.<br /><a class="link" href="">Go to github and have a look</a></p>
+          <p>I started learning Java in 2016. Since then, I have started loving coding. I built an application called CityLodge, which is a apartment renting system.<br /><a class="link" href="https://github.com/SiqiaoLi/CityLodge">Go to github and have a look</a></p>
         </div>
       </div>
       <hr>
@@ -51,9 +51,9 @@
     </div>
 
     <div class="bottom-container">
-      <a class="footer-link" href="https://www.linkedin.com/">LinkedIn</a>
-      <a class="footer-link" href="https://twitter.com/">Twitter</a>
-      <a class="footer-link" href="https://www.appbrewery.co/">Website</a>
+      <a class="footer-link" href="https://www.linkedin.com/in/siqiao-li-b973b1130/">LinkedIn</a>
+      <a class="footer-link" href="https://twitter.com/BJTUQIAO">Twitter</a>
+      <a class="footer-link" href="https://www.facebook.com/profile.php?id=100011042626989">Website</a>
       <p class="copyright">© 2020 Siqiao Li.</p>
     </div>
 
