--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
     <div class="bottom-container">
       <a class="footer-link" href="https://www.linkedin.com/in/siqiao-li-b973b1130/">LinkedIn</a>
       <a class="footer-link" href="https://twitter.com/BJTUQIAO">Twitter</a>
-      <a class="footer-link" href="https://www.facebook.com/profile.php?id=100011042626989">Website</a>
+      <a class="footer-link" href="https://www.facebook.com/profile.php?id=100011042626989">Facebook</a>
       <p class="copyright">© 2020 Siqiao Li.</p>
     </div>
 
