--- a/index.html
+++ b/index.html
@@ -1,61 +1,112 @@
 <!DOCTYPE html>
 <html lang="en" dir="ltr">
   <head>
-    <meta charset="utf-8">
+    <meta charset="utf-8" />
     <title>Siqiao Li</title>
-    <link rel="stylesheet" href="css/styles.css">
-    <link rel="icon" href="s.ico">
-    <link href="https://fonts.googleapis.com/css2?family=Merriweather&family=Montserrat&family=Sacramento&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="css/styles.css" />
+    <link rel="icon" href="s.ico" />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Merriweather&family=Montserrat&family=Sacramento&display=swap"
+      rel="stylesheet"
+    />
   </head>
   <body>
     <div class="top-container">
-      <img class="top-planet" src="images/planet.png" alt="planet-img">
+      <img class="top-planet" src="images/planet.png" alt="planet-img" />
       <h1>I'm Siqiao</h1>
       <h2>a RMIT student</h2>
-      <img class="bottom-world" src="images/world.png" alt="earth-img">
-      <img src="images/spaceship.png" alt="spaceship-img">
+      <img class="bottom-world" src="images/world.png" alt="earth-img" />
+      <img src="images/spaceship.png" alt="spaceship-img" />
     </div>
 
     <div class="middle-container">
       <div class="profile">
-        <img class="spaceman" src="images/astron.png" alt="spaceman">
+        <img class="spaceman" src="images/astron.png" alt="spaceman" />
         <h2>Hello.</h2>
-        <p class="intro">My name is Siqiao Li. I am a RMIT student studying Master of IT. I like coding and building Websites.</p>
+        <p class="intro">
+          My name is Siqiao Li. I am a RMIT student studying Master of IT. I
+          like coding and building Websites.
+        </p>
       </div>
-      <hr>
+      <hr />
       <div class="skills">
         <h2>My Skills.</h2>
         <div class="skill-row">
-          <img class="web-img" src="images/web-development.png" alt="web-img">
+          <img class="web-img" src="images/react.png" alt="web-img" />
+          <h3>React+Redux</h3>
+          <p>
+            In 2021, I built a music website called Porcelain, which is a
+            website providing songs from NetEase Cloud Music Top lists.<br /><a
+              class="link"
+              href="https://porcelain-music.s3-ap-southeast-1.amazonaws.com/index.html"
+              >Go and have a look</a
+            >
+          </p>
+        </div>
+        <div class="skill-row">
+          <img class="web-img" src="images/web-development.png" alt="web-img" />
           <h3>HTML + CSS + Javascript</h3>
-          <p>In 2020, I built a website called StayHome, which is a website providing information about COVID-19 and encouraging people to stay at home.<br /><a class="link" href="https://task2-272810.appspot.com/login">Go and have a look</a></p>
+          <p>
+            In 2020, I built a website called StayHome, which is a website
+            providing information about COVID-19 and encouraging people to stay
+            at home.<br /><a
+              class="link"
+              href="https://task2-272810.appspot.com/login"
+              >Go and have a look</a
+            >
+          </p>
         </div>
         <div class="skill-row">
-          <img class="php-img" src="images/php.png" alt="php-img">
+          <img class="php-img" src="images/php.png" alt="php-img" />
           <h3>php</h3>
-          <p>In 2019, I built a social media website called Lite. Like facebook, people can search friends, add friends and create post.<br /><a class="link" href="http://titan.csit.rmit.edu.au/~s3774940/LiteHomepage.html">Go and make a friend!</a></p>
+          <p>
+            In 2019, I built a social media website called Lite. Like facebook,
+            people can search friends, add friends and create post.<br /><a
+              class="link"
+              href="http://titan.csit.rmit.edu.au/~s3774940/LiteHomepage.html"
+              >Go and make a friend!</a
+            >
+          </p>
         </div>
         <div class="skill-row">
-          <img class="java-img" src="images/java.png" alt="java-img">
+          <img class="java-img" src="images/java.png" alt="java-img" />
           <h3>Java</h3>
-          <p>I started learning Java in 2016. Since then, I have started loving coding. I built an application called CityLodge, which is a apartment renting system.<br /><a class="link" href="https://github.com/SiqiaoLi/CityLodge">Go to github and have a look</a></p>
+          <p>
+            I started learning Java in 2016. Since then, I have started loving
+            coding. I built an application called CityLodge, which is a
+            apartment renting system.<br /><a
+              class="link"
+              href="https://github.com/SiqiaoLi/CityLodge"
+              >Go to github and have a look</a
+            >
+          </p>
         </div>
       </div>
-      <hr>
+      <hr />
       <div class="contact-me">
         <h2>Get In Touch</h2>
         <h3>If you love Radiohead as much as I do.</h3>
-        <p class="contact-message">Radiohead is the best band in the universe. Agree? Let's talk about how awesome they are! We can code while we listen to their songs!</p>
+        <p class="contact-message">
+          Radiohead is the best band in the universe. Agree? Let's talk about
+          how awesome they are! We can code while we listen to their songs!
+        </p>
         <a class="btn" href="mailto:11291141bjtu@gmail.com">CONTACT ME</a>
       </div>
     </div>
 
     <div class="bottom-container">
-      <a class="footer-link" href="https://www.linkedin.com/in/siqiao-li-b973b1130/">LinkedIn</a>
+      <a
+        class="footer-link"
+        href="https://www.linkedin.com/in/siqiao-li-b973b1130/"
+        >LinkedIn</a
+      >
       <a class="footer-link" href="https://twitter.com/BJTUQIAO">Twitter</a>
-      <a class="footer-link" href="https://www.facebook.com/profile.php?id=100011042626989">Facebook</a>
+      <a
+        class="footer-link"
+        href="https://www.facebook.com/profile.php?id=100011042626989"
+        >Facebook</a
+      >
       <p class="copyright">© 2020 Siqiao Li.</p>
     </div>
-
   </body>
 </html>
