--- a/index.html
+++ b/index.html
@@ -51,8 +51,8 @@
             providing information about COVID-19 and encouraging people to stay
             at home.<br /><a
               class="link"
-              href="https://task2-272810.appspot.com/login"
-              >Go and have a look</a
+              href="https://github.com/SiqiaoLi/webcovid19"
+              >Go to GitHub and have a look</a
             >
           </p>
         </div>
@@ -63,8 +63,8 @@
             In 2019, I built a social media website called Lite. Like facebook,
             people can search friends, add friends and create post.<br /><a
               class="link"
-              href="http://titan.csit.rmit.edu.au/~s3774940/LiteHomepage.html"
-              >Go and make a friend!</a
+              href="https://github.com/SiqiaoLi/Lite"
+              >Go to GitHub and have a look</a
             >
           </p>
         </div>
@@ -77,7 +77,7 @@
             apartment renting system.<br /><a
               class="link"
               href="https://github.com/SiqiaoLi/CityLodge"
-              >Go to github and have a look</a
+              >Go to GitHub and have a look</a
             >
           </p>
         </div>
